--- a/DHGCDB/Web.config
+++ b/DHGCDB/Web.config
@@ -10,14 +10,16 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DHGCDB-20160725090445.mdf;Initial Catalog=aspnet-DHGCDB-20160725090445;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="PersonDBContext"  connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\People.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ClientDBContext"  connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DHGCDB.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PersonDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\People.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ClientDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DHGCDB.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DHGCDBTemplateDirectory" value="C:\Users\nmartin\Documents\Dermot\MVC\DHGCDB\Templates" />
+    <add key="DHGCDBOutputDirectory" value="C:\Users\nmartin\Documents\Dermot\MVC\DHGCDB\Output" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
