--- a/DHGCDB/DHGCDB.csproj
+++ b/DHGCDB/DHGCDB.csproj
@@ -368,6 +368,8 @@
     <Content Include="Views\Review\IndividualProductValuation.cshtml" />
     <Content Include="Views\Review\AddPersonMissingATR.cshtml" />
     <Content Include="Views\Review\ChangePersonATR.cshtml" />
+    <Content Include="Views\FundSelection\AddFund.cshtml" />
+    <Content Include="Views\FundSelection\DeleteFund.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
