--- a/DHGCDB/DHGCDB.csproj
+++ b/DHGCDB/DHGCDB.csproj
@@ -213,14 +213,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201607270816015_Initial.cs" />
-    <Compile Include="Migrations\201607270816015_Initial.Designer.cs">
-      <DependentUpon>201607270816015_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201607270838301_Gender-BirthDate.cs" />
-    <Compile Include="Migrations\201607270838301_Gender-BirthDate.Designer.cs">
-      <DependentUpon>201607270838301_Gender-BirthDate.cs</DependentUpon>
-    </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\AttitudeToRisk.cs" />
@@ -275,8 +267,6 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="Properties\PublishProfiles\dhgcdb.pubxml" />
-    <None Include="Properties\PublishProfiles\localpc.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -374,6 +364,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Migrations\" />
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -382,14 +374,6 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201607270816015_Initial.resx">
-      <DependentUpon>201607270816015_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201607270838301_Gender-BirthDate.resx">
-      <DependentUpon>201607270838301_Gender-BirthDate.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
